--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="content"></div>
-    <script src="nosedive.js"></script>
+    <script src="js/nosedive.js"></script>
   </body>
 </html>
